<resources>

    <string name="open_alarm_time_default">00:00</string>
    <string name="setting_title">设置</string>

    <string name="never_login">未登录</string>
    <string name="head_label">头像</string>
    <string name="name_label">昵称</string>
    <string name="viomi_no_label">用户ID</string>
    <string name="logout_now">退出登录</string>
    <string name="login_now">立即登录</string>
    <string name="mi_iot_account">米家账号</string>
    <string name="mi_iot_no_bind">未绑定</string>
    <string name="mi_iot_has_bind">已绑定</string>
    <string name="login_quit">退出账号</string>
    <string name="logout_message">是否退出当前账号？</string>
    <string name="mi_iot_unbind_message">设备解绑同时注销账号登录，是否解绑？</string>
    <string name="experience_app">去APP体验更多操作</string>
    <string name="login_title">扫码登录</string>
    <string name="use_tips">如何使用？</string>
    <string name="viomi_login_scan_tips">请使用云米商城app扫码登录</string>
    <string name="mijia_login_scan_tips">请使用米家app扫码登录</string>
    <string name="login_error_tip">登录超时，请重新扫码</string>
    <string name="logining">正在登录</string>
    <string name="retry_load_qrcode">重新获取</string>
    <string name="how_to_use">如何使用</string>
    <string name="go_back">返回</string>
    <string name="app_qrcode_text">没有云米商城APP？扫描上方二维码下载</string>

    <string name="wifi_switch">WLAN开关</string>
    <string name="wifi_connected_title">已匹配可用的WLAN</string>
    <string name="wifi_nearby">附近的WLAN</string>
    <string name="wifi_refresh">刷新</string>

    <string name="status_connected">已连接</string>
    <string name="status_connecting">正在连接…</string>
    <string name="status_unconnected">未连接</string>

    <string name="wifi_cancle">取消</string>
    <string name="wifi_joinin">加入</string>
    <string name="common_close">关闭</string>
    <string name="wifi_forget_pwd_title">重要提示</string>
    <string name="wifi_ignore_netword">忽略此网络</string>

    <string name="time_format">24小时制</string>
    <string name="time_currentdate">当前日期</string>
    <string name="time_currenttime">当前时间</string>
    <string name="management_time_date">%1$s年%2$s月%3$s日</string>
    <string name="morning">上午</string>
    <string name="noon">中午</string>
    <string name="afternoon">下午</string>
    <string name="time_cancel">取消</string>
    <string name="time_sure">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分钟</string>

    <string name="sound_screen_brightness">屏幕亮度</string>
    <string name="sound_stanby_time">自动熄屏</string>
    <string name="sound_lock_time">锁屏</string>
    <string name="sound_lock_second">秒</string>
    <string name="sound_speak">语音</string>
    <string name="sound_volume_control">音量调节</string>


    <string name="upgrade_updating">软件版本更新中</string>
    <string name="upgrade_download_success">软件下载成功，即将自动安装…</string>
    <string name="upgrade_install_start">软件下载成功，正在自动安装…</string>
    <string name="upgrade_installing">安装中</string>
    <string name="upgrade_download_fail">软件下载失败</string>
    <string name="upgrade_late">暂不升级</string>
    <string name="upgrade_sure">立即升级</string>
    <string name="upgrade_cancel">取消升级</string>
    <string name="about_software_version_update_cancel">取消</string>
    <string name="module_sure">确定</string>
    <string name="upgrade_current_tip">当前版本：%1$s</string>
    <string name="upgrade_new_tip">最新版本：%1$s</string>
    <string name="firmupgrade_title">固件更新</string>
    <string name="firmupgrade_title_new">已经是最新版本</string>
    <string name="upgrade_checking">正在检测更新…</string>
    <string name="upgrade_suceess">升级成功</string>
    <string name="restore_factory_tips">此操作会清除您内部存储设备的所有数据，是否继续？</string>
    <string name="reset_system_tips">您确认重启系统吗？</string>
    <string name="management_did_mac_message">MAC: %1$s,  DID: %2$s</string>
    <string name="setting_cup">杯量</string>
    <string name="setting_mode">模式</string>
    <string name="setting_wendu">温度</string>
    <string name="setting_lock">童锁设置</string>
    <string name="setting_child_lock">童锁</string>
    <string name="setting_more">更多功能</string>
    <string name="setting_filter">滤芯功能</string>
    <string name="setting_account_title">账号信息</string>
    <string name="setting_appdownload_tips">扫描二维码即可下载云米商城APP</string>
    <string name="setting_logout">退出</string>
    <string name="setting_input_pass">输入密码</string>
    <string name="setting_input">输入</string>
    <string name="setting_password">的密码</string>
    <string name="setting_input_pass_hint">请输入密码</string>
    <string name="setting_time_auto">自动设置</string>
    <string name="setting_on">开启</string>
    <string name="setting_firm_version">固件版本</string>
    <string name="setting_firm_updating">固件版本更新中</string>
    <string name="setting_firm_fail">固件更新失败</string>

    <string name="setting_firm_finish">完成</string>
    <string name="setting_no_save">不再保存</string>

    <string name="setting_factorytest">工厂测试</string>
    <string name="setting_factorytest_model_chnname">型号:</string>
    <string name="setting_factorytest_model_engname">model:</string>
    <string name="setting_factorytest_mcu_version">MCU版本:</string>
    <string name="setting_factorytest_sceentest">屏自检</string>
    <string name="setting_factorytest_devicefasttest">整机快检</string>
    <string name="setting_factorytest_deviceageing">整机老化</string>
    <string name="setting_factorytest_longageing">长期老化</string>

    <string name="setting_hotspot_tips">允许其他设备接入您的共享网络，账号是本设备连接的WIFI加“_hot”,密码:12345678</string>
    <string name="setting_hotspot_hz">频段</string>
    <string name="setting_hotspot_devices">已接入热点的设备\n(热点默认密码为:12345678)</string>
    <string name="setting_hotspot_dialog_tips">大部分智能家电的频段为2.4GHz，开启将导致无法连接该设备热点喔~</string>
    <string name="setting_hotspot_unavailable">设备未联网，不可开启热点喔</string>
    <string name="setting_theme_change">定时更换</string>
    <string name="setting_theme_hz">更换频率</string>
    <string name="setting_theme_title1">固定主题</string>
    <string name="setting_theme_subtitle1">单选</string>
    <string name="setting_theme_title2">轮换主题</string>
    <string name="setting_theme_subtitle2">至少选择2张</string>
    <string name="setting_theme_1">云米绿</string>
    <string name="setting_theme_2">科技蓝</string>
    <string name="setting_theme_3">能量紫</string>
    <string name="setting_temp_tips">不能与其他档位温度一样</string>
    <string name="setting_login_success">登录成功</string>
    <string name="setting_logout_success">退出登录成功</string>
    <string name="setting_publickey_tip">三元组不合法，请重新烧录</string>
    <string name="menuitem_wlan">WiFi设置</string>
    <string name="menuitem_hotspot">设备热点</string>
    <string name="menuitem_screenvolume">屏幕与声音</string>
    <string name="menuitem_datetime">日期与时间</string>
    <string name="menuitem_theme">主题设置</string>
    <string name="menuitem_about">关于软件</string>
    <string name="menuitem_status_open">打开</string>
    <string name="menuitem_status_close">关闭</string>
    <string name="aboutsofe_menu_sofeversion">软件版本</string>
    <string name="aboutsofe_menu_firmversion">固件版本</string>
    <string name="aboutsofe_menu_systemversion">系统版本</string>
    <string name="aboutsofe_menu_netname">网络名称</string>
    <string name="aboutsofe_menu_hotline">客服电话</string>
    <string name="aboutsofe_menu_resetsystem">恢复出厂设置</string>
    <string name="reset_system_title">重启系统</string>
    <string name="aboutsofe_menu_uploadlog">上传日志</string>
    <string name="aboutsofe_menu_systemsetting">系统设置</string>
    <string name="aboutsofe_menu_factorytest">工厂测试</string>
    <string name="aboutsofe_version_pre">V</string>
    <string name="viot_wifi_settingfail">WIFi 连接失败，请重新连接</string>
    <string name="common_setting">公共设置页</string>
    <string name="factorytest_open_propshowtip">打开属性显示</string>
    <string name="factorytest_close_propshowtip">关闭属性显示</string>
    <string name="factorytest_deviceinfo">设备信息:</string>
    <string name="facotrytest_enviromentchange">环境切换</string>
    <string name="facotory_system_test">系统工厂测试</string>
    <string name="facotry_open_muc">打开电控属性显示</string>
    <string name="fatorytest_serial_deal">串口开关测试</string>
    <string name="login_guid_tip">查看登录教程</string>
    <string name="sure">是</string>
    <string name="notsure">否</string>
    <string name="rebindmiot_tip">当前已登录米家账号，使用云米账号替换？</string>
    <string name="setting_fail">设置失败</string>
    <string name="modulesetting_percent_unit">%</string>
    <string name="modeset_no_enughtspace">系统无足够剩余空间</string>
    <string name="setting_cleanlog">清空日志</string>
    <string name="net_title">网络提示</string>
    <string name="net_content">没有网络，是否去联网?</string>
    <string name="progress_unit">%d%s</string>
    <string name="module_setting_dubleline">%s\n%s</string>
</resources>
