<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_dialog_bg"
        android:padding="23dp">

        <TextView
            android:id="@+id/upgrade_title"
            style="@style/font_style_sc_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/aboutsofe_menu_sofeversion"
            android:textColor="@color/color_white"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/upgrade_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/color_white_alpha_60"
            android:textSize="34dp"
            app:layout_constraintBottom_toTopOf="@id/upgrade_sure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upgrade_title"
            tools:text="@string/upgrade_current_tip" />

        <TextView
            android:id="@+id/upgrade_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="@color/color_green_light"
            android:textSize="58dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/upgrade_sure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upgrade_title"
            tools:text="@string/modulesetting_percent_unit" />


        <Button
            android:id="@+id/upgrade_late"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/shape_green_stock_btn"
            android:stateListAnimator="@null"
            android:text="@string/upgrade_late"
            android:textColor="@color/color_green_light"
            android:textSize="34dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/upgrade_sure"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/upgrade_sure"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/shape_green_btn"
            android:stateListAnimator="@null"
            android:text="@string/module_sure"
            android:textColor="@color/color_white"
            android:textSize="34dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/upgrade_late" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>