<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="480dp"
        android:layout_height="300dp"
        android:background="@drawable/shape_dialog_bg"
        android:padding="23dp">

        <TextView
            android:id="@+id/logout_warming"
            style="@style/font_style_sc_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wifi_forget_pwd_title"
            android:textColor="@color/color_white"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logout_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_vertical"
            android:text="@string/rebindmiot_tip"
            android:textColor="@color/color_white_alpha_60"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logout_warming" />

        <Button
            android:id="@+id/sure_btn"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_green_stock_btn"
            android:stateListAnimator="@null"
            android:text="@string/sure"
            android:textColor="@color/color_green_light"
            android:textSize="18dp"
            app:layout_constraintEnd_toStartOf="@id/cancle_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logout_tips" />

        <Button
            android:id="@+id/cancle_btn"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_green_btn"
            android:stateListAnimator="@null"
            android:text="@string/notsure"
            android:textColor="@color/color_white"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@id/sure_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sure_btn"
            app:layout_constraintTop_toTopOf="@id/sure_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>