<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/resetsystem_title"
            style="@style/font_style_sc_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/aboutsofe_menu_resetsystem"
            android:textColor="@color/color_white"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resetsystem_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/restore_factory_tips"
            android:textColor="@color/color_white_alpha_60"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@id/resetsystem_sure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetsystem_title" />

        <Button
            android:id="@+id/resetsystem_cancel"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/shape_green_stock_btn"
            android:stateListAnimator="@null"
            android:text="@string/notsure"
            android:textColor="@color/color_green_light"
            android:textSize="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/resetsystem_sure"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/resetsystem_sure"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/shape_green_btn"
            android:stateListAnimator="@null"
            android:text="@string/sure"
            android:textColor="@color/color_white"
            android:textSize="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/resetsystem_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>