<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_bg"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        tools:layout_height="408dp"
        tools:layout_width="722dp">

        <TextView
            android:id="@+id/logout_title"
            style="@style/font_style_sc_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_forget_pwd_title"
            android:textColor="@color/color_white"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logout_tips"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:textColor="@color/color_white_alpha_60"
            android:textSize="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logout_title"
            tools:text="@string/login_quit" />

        <Button
            android:id="@+id/logout_sure"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_green_stock_btn"
            android:paddingHorizontal="100dp"
            android:stateListAnimator="@null"
            android:text="@string/sure"
            android:textColor="@color/color_green_light"
            android:textSize="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logout_cancel"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/logout_cancel"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/shape_green_btn"
            android:paddingHorizontal="100dp"
            android:stateListAnimator="@null"
            android:text="@string/notsure"
            android:textColor="@color/color_white"
            android:textSize="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/logout_sure" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>