<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="612dp"
        android:layout_height="373dp"
        android:background="@drawable/shape_dialog_bg"
        android:paddingHorizontal="40dp">

        <TextView
            style="@style/font_style_sc_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/setting_input_pass"
            android:textColor="@color/color_white"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/wifi_pwd_et"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_marginTop="94dp"
            android:background="@drawable/shape_input_et"
            android:gravity="center_vertical"
            android:hint="@string/setting_input_pass_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_99"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wifi_name_title"
            style="@style/font_style_sc_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textColor="@color/color_99"
            android:textSize="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wifi_pwd_et" />

        <Button
            android:id="@+id/cancle_btn"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/shape_green_stock_btn"
            android:stateListAnimator="@null"
            android:text="@string/wifi_cancle"
            android:textColor="@color/color_green_light"
            android:textSize="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/join_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/join_btn"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_green_btn"
            android:clickable="false"
            android:stateListAnimator="@null"
            android:text="@string/wifi_joinin"
            android:textColor="@color/color_white"
            android:textSize="34dp"
            app:layout_constraintBottom_toBottomOf="@+id/cancle_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancle_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>